@@ -148,6 +148,9 @@ my $cmd = shift @ARGV;
 my $session = new EPrints::Session( 1, $repoid, $noise );
 exit( 1 ) unless defined $session;
 
+$session->get_repository->{config}->{enable_web_imports} = 1;
+$session->get_repository->{config}->{enable_file_imports} = 1;
+
 my %opts = ();
 
 if( defined $cuserid )
